internal/config/testdata/invalid-config/SecretsBackendType.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: "invalid"
  Jobs:
  [
    {
      SourceFolder: ./testdata
      CreateAlbums: folderName
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}